[tool.poetry]
name = "rooms-test"
version = "0.1.0"
description = ""
authors = ["Martin Dluhoš <dluhos.martin@gmail.com>"]
readme = "README.md"
packages = [{include = "rooms_test"}]

[tool.poetry.dependencies]
python = "^3.9"
oauth2client = "^4.1.3"
apiclient = "^1.0.4"
google-api-python-client = "^2.78.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
